[gd_scene load_steps=2 format=3 uid="uid://biueo5abrpq0o"]

[ext_resource type="Script" path="res://components/body/body_component.gd" id="1_453lb"]

[node name="BodyComponent" type="Node2D"]
script = ExtResource("1_453lb")

[node name="Base" type="Sprite2D" parent="."]
use_parent_material = true

[node name="Chest" type="Sprite2D" parent="."]
use_parent_material = true

[node name="Head" type="Sprite2D" parent="."]
use_parent_material = true

[node name="Legs" type="Sprite2D" parent="."]
use_parent_material = true

[node name="MainHand" type="Sprite2D" parent="."]
use_parent_material = true

[node name="OffHand" type="Sprite2D" parent="."]
use_parent_material = true
